# JGaussian

./: 2dgs_trainer.py  3dgs_trainer.py  README.md  mip_render.py  mip_trainer.py  render.py  render_2dgs.py  requirements.txt
application/gsheadrelighting/: camera_utils.py  custom_utils.py  gen_videos_gsparams.py  legacy.py
application/gsheadrelighting/jittorutils/: CMakeLists.txt  bias_act.py  conv2d_gradfix.py  conv2d_resample.py  filtered_lrelu.py  fma.py  grid_sample_gradfix.py  misc.py  persistence.py  training_stats.py  upfirdn2d.py
application/gsheadrelighting/jittorutils/ops/: bias_act.cuh  filtered_lrelu.cuh  upfirdn2d.cuh
application/gsheadrelighting/training/: background_network.py  checkpoint.py  crosssection_utils.py  gs_generator.py  networks_stylegan2.py  point_generator.py  transformer.py
application/gsheadrelighting/training/gaussian3d_splatting/: cam_utils.py  gaussian_model.py  renderer.py
application/gsheadrelighting/training/volumetric_rendering/: math_utils.py
arguments/: __init__.py
gaussian_renderer/: __init__.py  network_gui.py
gaussian_renderer_2dgs/: __init__.py  network_gui.py
gaussian_renderer_mip/: __init__.py
ops/NVDIFFREC/: __init__.py  light.py  test_func.py  util copy.py  util.py
ops/NVDIFFREC/renderutils/: CMakeLists.txt  __init__.py  bsdf.py  jittor_ops.py  loss.py
ops/NVDIFFREC/renderutils/c_src/: bsdf.h  cubemap.h  loss.h  mesh.h  normal.h
ops/NVDIFFREC/texture/: CMakeLists.txt  __init__.py  jittor_texture.py
ops/NVDIFFREC/texture/common/: common.cpp  common.h  texture copy.cu  texture.cu  texture.cuh
ops/diff_gaussian_rasterization/: CMakeLists.txt  __init__.py  rasterize_points.py
ops/diff_gaussian_rasterization/cuda_rasterizer/: apply_weights.cu  rasterizer.h  rasterizer_impl.cu
ops/diff_surfel_rasterization/: __init__.py  rasterize_points.py
ops/diff_surfel_rasterization/cuda_rasterizer/: rasterizer.h  rasterizer_impl.cu
ops/mip_diff_gaussian_rasterizater/: CMakeLists.txt
ops/mip_diff_gaussian_rasterizater/cuda_rasterizer/: forward.cu
ops/simple_knn/: Makefile
preprocess/: segment_torch.py  submodule._install.sh  submodule_install.sh
scene/: __init__.py  cameras.py  dataset.py  dataset_readers.py  gaussian_model.py  gaussian_model_mip.py
scene_pbr/: __init__.py  cameras.py  dataset_readers.py  gaussian_pbr_model.py
scripts/: 3dgs_combine.sh  deferredgs.sh  gsheadrelighting.sh  gsmesh.sh  mipgs.sh  stylized_gaussian.sh
utils/: camera_utils.py  depth.py  general_utils.py  graphics_utils.py  gsmesh_utils.py  image_utils.py  loss_utils.py  mcube_utils.py  mesh_utils copy.py  point_utils.py  render_utils.py
